--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
     <div class="card">
 
       <div class="image">
-        <img src="images/image-equilibrium.jpg">
+        <img src="image-equilibrium.jpg">
       </div>
 
       <div class="description">
@@ -32,7 +32,7 @@
       </div>
     </div>
       <div class="user">
-        <img src="images/image-avatar.png">
+        <img src="image-avatar.png">
         <p class="username">Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
