--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
   <main>
     <div class="card">
       <div class="image">
-        <img src="images/image-equilibrium.jpg" alt="image-equilibrium">
+        <img src="image-equilibrium.jpg" alt="image-equilibrium">
         <div class="overlay fadeEffect"></div>
         <svg class='view' width="48" height="48" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h48v48H0z"/><path d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z" fill="#FFF" fill-rule="nonzero"/></g></svg>
       </div>
@@ -32,7 +32,7 @@
       </div>
     </div>
       <div class="user">
-        <img src="images/image-avatar.png" alt="image-avatar">
+        <img src="image-avatar.png" alt="image-avatar">
         <p class="username">Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
