--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <title>Frontend Mentor | NFT preview card component</title>
+  <title>NFT preview card component</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,16 +35,6 @@
         <p class="username">Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">zyudev</a>.
-    </div>
-
   </main>
-
-
-
-
 </body>
 </html>
